# musicxml-rs

./: Cargo.toml
resources/xml-test-files/: 01a-Pitches-Pitches.xml  my_bonnie.musicxml  my_bonnie.xml
src/: main.rs  musicxml.rs
src/musicxml/: accidental.rs  articulations.rs  attributes.rs  backup.rs  barline.rs  bass.rs  core.rs  credit.rs  defaults.rs  degree.rs  direction.rs  dynamics.rs  forward.rs  frame.rs  group_barline.rs  group_symbol.rs  harmony.rs  identification.rs  left_right_middle.rs  level.rs  lyric.rs  measure.rs  measure_layout.rs  measure_numbering_value.rs  midi_device.rs  midi_instrument.rs  notations.rs  note.rs  numeral.rs  numeral_key.rs  page_layout.rs  page_margins.rs  part.rs  part_display.rs  part_group.rs  part_list.rs  pitch.rs  print.rs  printable_value.rs  root.rs  (+12 more)
