[package]
name = "musicxml-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde-xml-rs = "0.6.0"

anyhow = "1.0.71"
roxmltree = "0.20.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.5"

[dev-dependencies]
serde_path_to_error = "0.1.16"
